--- a/websitestruct.html
+++ b/websitestruct.html
@@ -33,9 +33,9 @@
         <div class="content-box">
             <h2>Trending Products</h2>
             <image src="air-jordan-1-mid-shoes-86f1ZW.png">
-            <image src="images/nike.jpeg"></image>
-            <image src="images/pods.jpeg"></image>
-            <image src="images/11pro.jpg"></image>
+            <image src="nike.jpeg"></image>
+            <image src="pods.jpeg"></image>
+            <image src="11pro.jpg"></image>
         </div>
 
 
