--- a/homescreen.html
+++ b/homescreen.html
@@ -23,6 +23,7 @@
 <br>
 <p class="Introduction">
 Hello! My name is Darrius. Welcome to my website!
+     <image width="80px" src="air-jordan-1-mid-shoes-86f1ZW.png">
 </p>
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
