--- a/homescreen.html
+++ b/homescreen.html
@@ -23,7 +23,8 @@
 <br>
 <p class="Introduction">
 Hello! My name is Darrius. Welcome to my website!
-     <image width="80px" src="air-jordan-1-mid-shoes-86f1ZW.png">
+     <image width="80px" src="IMG_4237.JPEG">
+     <image width="80px" src="albumcover">listen to my newest album, insomnia, on spotify on 14th july!</image>
 </p>
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
