--- a/homescreen.html
+++ b/homescreen.html
@@ -25,6 +25,7 @@
 Hello! My name is Darrius. Welcome to my website!
      <image width="80px" src="IMG_4237.JPEG">
      <image width="80px" src="albumcover">listen to my newest album, insomnia, on spotify on 14th july!</image>
+     <image width="80px" src="rockalbum">also listen to rock album - my angel, on spotify now</image>
 </p>
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
