--- a/homescreen.html
+++ b/homescreen.html
@@ -24,8 +24,8 @@
 <p class="Introduction">
 Hello! My name is Darrius. Welcome to my website!
      <image width="80px" src="IMG_4237.JPEG">
-     <image width="80px" src="albumcover">listen to my newest album, insomnia, on spotify on 14th july!</image>
-     <image width="80px" src="rockalbum">also listen to rock album - my angel, on spotify now</image>
+     <image width="80px" src="albumcover.JPG">listen to my newest album, insomnia, on spotify on 14th july!</image>
+     <image width="80px" src="rockalbum.JPG">also listen to rock album - my angel, on spotify now</image>
 </p>
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
