--- a/homescreen.html
+++ b/homescreen.html
@@ -23,7 +23,7 @@
 <br>
 <p class="Introduction">
 Hello! My name is Darrius. Welcome to my website!
-     <image width="80px" src="IMG_4237.JPEG"> <--this is me!!
+     <image width="80px" src="IMG_4237.JPEG"> <--this is me!! i am darrius! the only buttons that work rn is shop & about
          <br><br>
      <image width="80px" src="albumcover.JPG"> <--listen to my newest album, insomnia, on spotify on 14th july!</image>
          <br><br>
