--- a/homescreen.html
+++ b/homescreen.html
@@ -12,7 +12,7 @@
 <button class="home">Home</button>
 <button class="projects">Projects</button>
 <button class="contact">Contact</button>
-<button class="about">About</button>
+<button class="about" onclick="location.href='about.html'">About</button>
 <button class="shop" onclick="location.href='websitestruct.html'">Shop</button>
 <button class="games">Games</button>
 </div>
@@ -23,7 +23,7 @@
 <br>
 <p class="Introduction">
 Hello! My name is Darrius. Welcome to my website!
-     <image width="80px" src="IMG_4237.JPEG"> <--this is me!! i am darrius! the only buttons that work rn is shop & about
+     <image width="80px" src="IMG_4237.JPEG"> <--this is me!! i am darrius! pls click on about or shop for more items
          <br><br>
      <image width="80px" src="albumcover.JPG"> <--listen to my newest album, insomnia, on spotify on 14th july!</image>
          <br><br>
