--- a/homescreen.html
+++ b/homescreen.html
@@ -1,33 +1,27 @@
 <html>
 <head>
     <link rel="stylesheet" href="homescreen.css">
+    <script src="homescreen.js"></script>
     <title>Darrius Goh - Home</title>
 </head>
 
 <body>
 <div class="front">
     <h1>DARRIUS GOH</h1>
-
+    <b>hi i'm darrius! welcome to my website! feel free to explore!</b>
 <div class="buttonchoices">
 <button class="home">Home</button>
 <button class="projects">Projects</button>
 <button class="contact">Contact</button>
-<button class="about" onclick="location.href='about.html'">About</button>
+<button class="about">About</button>
 <button class="shop" onclick="location.href='websitestruct.html'">Shop</button>
 <button class="games">Games</button>
 </div>
-
 </div>
-
-<br>
 <br>
 <p class="Introduction">
-Hello! My name is Darrius. Welcome to my website!
-     <image width="80px" src="IMG_4237.JPEG"> <--this is me!! i am darrius! pls click on about or shop for more items
-         <br><br>
-     <image width="80px" src="albumcover.JPG"> <--listen to my newest album, insomnia, on spotify on 14th july!</image>
-         <br><br>
-     <image width="80px" src="rockalbum.JPG"> <--also listen to rock album - my angel, on spotify now</image>
+Some information about me!<br>
+I am 14 years old this year, and I made this website by myself from scratch!<br>
 </p>
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
