--- a/homescreen.html
+++ b/homescreen.html
@@ -8,21 +8,23 @@
 <body>
 <div class="front">
     <h1>DARRIUS GOH</h1>
-    <b>hi i'm darrius! welcome to my website! feel free to explore!</b>
 <div class="buttonchoices">
 <button class="home">Home</button>
 <button class="projects">Projects</button>
 <button class="contact">Contact</button>
 <button class="about">About</button>
-<button class="shop" onclick="location.href='websitestruct.html'">Shop</button>
+<button class="shop" onclick="location.href='shop/websitestruct.html'">Shop</button>
 <button class="games">Games</button>
 </div>
 </div>
 <br>
 <p class="Introduction">
-Some information about me!<br>
-I am 14 years old this year, and I made this website by myself from scratch!<br>
+Welcome to my website! Feel free to check out all my projects above!<br>
 </p>
+
+
+<p class="Featured">Featured Items and Projects</p>
+
 <footer>
     <p> &copy;2024 Darrius Goh. All rights reserved.</p>
 </footer>
