--- a/websitestruct.html
+++ b/websitestruct.html
@@ -28,7 +28,7 @@
         <h2>Trending Products</h2>
         <div class="content-box" id="product-list">
             <div class="product" data-category="Clothing">
-                <img src="images/air-jordan-1-mid-shoes-86f1ZW.png" alt="Air Jordan 1 Mid Shoes">
+                <img src="" alt="Air Jordan 1 Mid Shoes">
                 <p class="textword">Nice Shoes - $199</p>
             </div>
             <div class="product" data-category="Clothing">
