--- a/homescreen.html
+++ b/homescreen.html
@@ -13,7 +13,7 @@
 <button class="projects">Projects</button>
 <button class="contact">Contact</button>
 <button class="about">About</button>
-<button class="shop" onclick="location.href='shop/websitestruct.html'">Shop</button>
+<button class="shop" onclick="location.href='websitestruct.html'">Shop</button>
 <button class="games">Games</button>
 </div>
 </div>
