--- a/websitestruct.html
+++ b/websitestruct.html
@@ -32,19 +32,19 @@
                 <p class="textword">Nice Shoes - $199</p>
             </div>
             <div class="product" data-category="Clothing">
-                <img src="images/nike.jpeg" alt="Nike Shoes">
+                <img src="nike.jpeg" alt="Nike Shoes">
                 <p class="textword">More Shoes - $139</p>
             </div>
             <div class="product" data-category="Electronics">
-                <img src="images/pods.jpeg" alt="Airpods">
+                <img src="pods.jpeg" alt="Airpods">
                 <p class="textword">Airpods - $77</p>  
             </div>
             <div class="product" data-category="Electronics">
-                <img src="images/11pro.jpg" alt="iPhone 11 Pro">
+                <img src="11pro.jpg" alt="iPhone 11 Pro">
                 <p class="textword">Expensive Phone - $885</p>
             </div>
             <div class="product" data-category="Beauty">
-                <img src="images/beauty.jpg" alt="Makeup">
+                <img src="beauty.jpg" alt="Makeup">
                 <p class="textword">Makeup Products - $25</p>
             </div>
         </div>
